# open-streetmap-mcp

./: README.md  pyproject.toml
examples/: client.py  llm_client.py  location_assistant_client.py
src/osm_mcp_server/: __init__.py  server.py
