[project]
name = "osm-mcp-server"
version = "0.1.0"
description = "An OpenStreetMap MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.3.0",]
[[project.authors]]
name = "Jagan Shanmugam"
email = "jagan.shanmugam@mercedes-benz.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
osm-mcp-server = "osm_mcp_server:main"
